Will Youmans transcription

--- a/_pages/podcast-episodes/ep-014.md
+++ b/_pages/podcast-episodes/ep-014.md
@@ -11,5 +11,276 @@ source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/014-Will-Youm
 show: false
 ---
 
-<i> Coming Soon </i>
 
+Dave: Hello, and welcome to the podcast. I'm your host, Dave Albert. In this show, I talked about technology building a company as a CTO, and co founder and have guests to discuss their roles in technology and entrepreneurship.
+ 
+[music]
+ 
+Dave: Today, I'm joined by Will Youmans of forefront software, the founder and lead developer. Thanks for joining me. Will, it's a pleasure to finally get to talk to you in person as it were.
+ 
+Will: Yes, yes. Thanks for the call.
+ 
+Dave: Yeah, definitely. So can you give me a little bit of background on yourself in your journey so far to to where you've come so far?
+ 
+Will: Sure. I've been a web developer since before I care to admit starting out, you know, and I think middle school when I bought the HTML for dummies book. It's just been a wild ride. Since then, I went to college and got a degree in math and went to the corporate world. I started out working on aircraft software for private and corporate jets, but quickly discovered that the startup world is what I was interested in doing. So after a few years of that, I started out as a junior developer working at some agencies and startups and and I worked my way up to to leadership which is where I am today. Currently, I am running the the forefront software, the web development agency. I also have my my startup CTO, Sumo kind of trying to product ties the intern interim CTO position for for startups and companies with smaller budgets.
+ 
+Dave: Yeah, definitely. That was what actually how I found you. It seemed like a really interesting element that I definitely want to get to later on in the episode. And so yeah, like you. I started so many years ago, I started development before there was a web so yes, I I know what you mean, have been in this game for quite some time. But luckily, I still love it. How about you?
+ 
+Will: Absolutely. It's, as I say, it's a wild ride. But I love every minute of it well, most minutes of it. 
+ 
+Dave: Well, you couldn't enjoy the UPS if it weren't for the downs. 
+ 
+Will: That's exactly right. 
+ 
+Dave: So So how big is forefront?
+ 
+Will: It's, it's me and a few contractors that I use from time to time and a few interns. One of my favorite things to do is to find a green talent, you know, people interested in web development in the startup world, I hire them on as an intern, and I kind of use them as a case study for for mentorship, really. So I've I've used forefront software as the kind of company for, for that initiative, really getting developers up to speed so that can be hired by by startups kind of give them experience of, you know, how, how web development is done, both communication and actually developing a software and then, you know, mentoring them as they, you know develop software and get them prepared for the real world.
+ 
+Dave: Oh, that's fantastic. 
+ 
+Will: It's a good way of having young young talent is interested in eager to learn but can be can be used relatively inexpensively.
+ 
+Dave: Yeah. At one of my favorite things is mentorship as love sharing the, the pains that I've already experienced than the hard one knowledge that I have, through many, many, many ways not to do things. That's right. Which is kind of the point of this podcast.
+ 
+Will: Right? Yeah, yeah, remembering back all the mistakes that I made, I'm, you know, trying to make sure that, you know, a lot of times it's good, there's mistakes are good, you know, you learn from them. But, you know, things can be much smoother and, and less frustrating along the way, if, you know, if they're given some heads up there.
+ 
+Dave: What's the typical client or forefront. 
+ 
+Will: It varies all the way from, you know, small marketing websites for small businesses.
+Right now, I'm working on a site for a corporate restaurant chain all the way up to startups. And that's kind of was the the impetus to starting CTO Sumo over the last few years, I've gotten the opportunity to kind of play the role of interim CTO for some startups and, you know, doing everything from defining architecture of their software, to hiring their team and mentoring them, as we talked about already. So really, the whole gamut of that kind of work is under the forefront software umbrella.
+ 
+Dave: Okay, interesting. So what would be something that you found really surprising that you learned through building forefront?
+ 
+Will: Sure. I think that, you know, when you're a junior level developer, you focus really on, you know, improving your tech abilities, your, you know, programming abilities, and really focus only on that, you know, which is extremely important, and your performance in that area is important. But a lot of times, and myself included, I focus on that over kind of the human side of web development, you know, communicating with, with clients, and doing a billing and some of the business side. So, that's, that's been a challenge over the years, I think, by this point, I've figured it out. But that's something that I wasn't quite prepared for, you know, when I went to it, it was kind of my freelancing business that turned into something a little bit more and it's just, you know, never really considered, you know, how much time is spent on on those sort of unbillable things compared to you know, doing the fun stuff the development
+ 
+Dave: It's a definitely understand that from Medit most current startup that that the the finance work and the team elements that you didn't expect to need to do. So I've been, I've been in plenty of leadership roles before, but those were more team lead, mentorship, not, you know, having to deal with inner personal things, and ensuring teammate, you know, people were happy, and all the paperwork that needs to be done. And that was really a shock to me. So, with all the junior people that you've got coming on, Have you picked up any significant shortcuts to bring them up to speed or to developing them, I really, really wish it's really, you know, working with them closely, day to day, finding a good balance from micromanagement, and kind of leaving, leaving them alone to figure it out on their own, you know, my initial strategy was, was maybe doing a little too much micromanaging. And it really doesn't allow them to grow, or really learn how to learn. I think that part of a very important thing that's not really talking about a lot for developers is learning how to learn because, you know, technology changes, there's always new fads and new things to that clients are going to want and you need to be able to, you know, quickly go from never touching it to being proficient so you can build what clients want. So it's more important to know how to, how to learn them, you know, what a for loop is, and they use it, you know,
+ 
+Dave: Yeah, yeah, when once you've kind of gotten down syntax of one paradigm of programming, it's not that hard to pick up a new one, of course, you have to learn all the libraries and oh, syntax, and special dependencies and things like that. But it's so much easier once you understand the logic behind it.
+ 
+Will: Right. Right. Exactly. And it's been, it's been really interesting, as my clients have, you know, moved more from jQuery front end to something more structured, like fewer react, seeing how these these junior developers I've watched, seeing how they, you know, take what they've learned and apply it to this completely new way of thinking. It's just really interesting, you know, how it's really just interesting to watch and can mentor them through that,
+ 
+Dave: Yeah, it's very interesting. So on to the CTO Sumo what, what what is it?
+
+Will: Sure it's, it's really my effort to product guys the concept of an interim CTO, so I'm noticing more and more that startups you know, whether they're well funded or not, are really finding it tough to make a leap from, you know, having a just a regular development team with a couple of leads to the actual CTO role, which is extremely important, but you know, can cost $200,000 plus benefits when it would really a lot of times what they need to bring them from early stage startup to something a little bit more robust and scalable is more of an interim CTO position, someone who can can kind of pave the way for hiring of a real CTO when the time comes. And so my idea for CTO Sumo is to have it's kind of a SAS product, you know, it's been billed monthly new get a certain package a certain amount of hours of consulting hours, that it can be used in whatever way the client wants, My vision is that it would include not as much actual software development, but more, you know, higher level thinking, you know, taking, I guess, auditing whatever legacy software they have, making architectural decisions so that it can be scalable and used as the company grows, as well as hiring the technical staff, whether it be supplementing whatever their staff is currently, or mentoring any existing staff to get them to a position where the company can succeed. And the goal is when my time comes to a close, I would be helping the company hire full time CTO to take him to next level.
+ 
+Dave: Alright, cool. Yeah, I work in with I'm part of an accelerator program. And some of the other members of the cohort have and other cohorts have asked, asked me for assistance and looking for CTOs looking for developers understanding what's reasonable, within quotes for software and proposals having not having any technical people. So they were able to create MVPs that were able to verify, you know, validate their problem hypothesis. But having to transition from that to fully sustainable software, there's a bit of a difficulty, and I really haven't had great answers for them. I mean, because I only have so much time in a day. So I could see how how this would be something very useful, there would be people who would say, you'd be a bit crazy not to have an actual tech person, right, with senior experience embedded in the team from the beginning, if your core offering is going to be software. What would you say to that in regards..
+
+
+
+Will: That's, that's a really good point of first, what you're describing, there is exactly the problem of trying to solve I see, I see a lot of startups who develop that MVP, you know, working with an accelerator, or, you know, people volunteering their time, like you're referencing there, and then struggling to take that to, you know, add adding features, and, you know, scaling a company. So, my, my goal would be to be there to help them with that, whether it means taking existing MVP and building on it, if it's built well, and way that can be scaled, or if it means, you know, starting from scratch with a more forward looking architecture. And to your point, though, yes, I think that it would be definitely in the company's best interest to have a developer to that stays from the very beginning, whether they play the role of lead or actually get the CEO CTO title is not as relevant. But a lot of times, it's really an issue with cost, you have startups who have, you know, $50,000, or something, to have an MVP and, and get the first thousand customers. And a lot of times, that's not practical to have a full time development lead. And so my service would, would, would be there to help that I mean, it's, it's billed monthly cancel, anytime providing consulting hours to to solve their problems, you know, whatever those problems may be.
+ 
+Dave: Okay. And have you thought through the transition from CTO Sumo to the full term CTO, how that how you might ease that transition?
+ 
+Will: Yes, I actually have a case study, I've been working with a start up for about four, three or four years now, I started as the freelance developer when their old Freelancer flaked out work on building the software hiring the company, or excuse me, hiring the engineering staff and mentoring them. And I'm still involved in that. And right now, actually, we're in the process of bringing onboard actual CTO, and CIO. And so yes, this is definitely something that's currently currently being I'm currently spending a lot of time thinking about. And what we ended up doing in this case is we hired two leads, one of them handled more the infrastructure side with the goal of him taking on the role of CIO if he proved himself and then the second developer was the lead of the the, the customer targeted app or software. So obviously, he would be the one who would take on the CTO role. And so that those titles haven't yet actually been officially bestowed upon them. But we're in the process of that right now. So I'm looking forward to this being a very successful case study.
+ 
+Dave: Excellent. That's great to hear. Because that was one of the first thoughts that I had was that that would be difficult, because I could, I can just imagine trying to transfer all the knowledge I have, from what I've built to someone else in a semi short period of time. And I don't know how I'd be able to do it. I mean, we do have documentation and confluence. But as a start up your documentation is never up to date, because things change way too fast to try to keep up.
+ 
+Will: That's right. And I like to say this startup legacy knowledge is my job security is just for that exact situation you're talking about there. And that's why it was important to me not to hire someone for that CTO role, and then kind of disappear, I think that would really, I wouldn't say caused the company to fail in any way. But definitely add some some some frustration as that transition happen. I think the the easiest way for this transition to happen would be to hire some hire them as and work alongside them for months even. And it's been months in this case, so that the transition would go as smoothly as possible. And as much legacy knowledge is transferred as possible. Because Yeah, we also have documentation and confluence. And it is, it is not only not up to date, but definitely incomplete. Because we have, you know, four years of legacy knowledge that, you know, it's constantly changing.
+ 
+Dave: Yeah, that's one thing that non technical founders need to understand. And I think is as, as technical folks, we may not do a good enough job explaining all the complexities that are involved with, with, with software development, it's, I don't even know a good way a good analogy for it. But that every single decision makes every subsequent decision harder to change. So to understand all the threads, I guess it's kind of like trying to, as we're coming up on Christmas, trying to untangle the holiday lights for your Christmas tree, you pull the wrong thing too hard, it becomes such a ball of not that there's no way you will ever be able to untangle it, you just basically have to cut out where you can, or throw it
+ 
+Will: Exactly right. And that's, that's what we're trying to avoid, you know, sometimes, if, if I would come in as an intern CTO, it may be necessary to throw out, you know, what was created for the MVP, but definitely not as my exit does not make sense to start over. And yes, everything builds on each other. And, you know, decisions were made for business regions, you know, in the moment for, for whatever reason, that a lot of times that decision doesn't make sense later, or maybe, you know, it conflicts with future decisions. And those things need to be communicated so that the transition can, you know, can be very smooth.
+
+Dave: Yeah, absolutely, that's a, there's so many different constraints, when you're making decisions that, you know, it could be financial, it could be time based, it could be education based all those together, usually some factor of it. So, why didn't we have this in place before? Well, because we couldn't do it in the past with, you know, this technology is only been, you know, recently invented, or recently become mature enough to trust it in production, or we didn't even know it existed. So, yeah, it's a, it's a tough one. But it's good to hear that you've got lots of plans laid on transition that and I think most people would have, you know, some view on that, but it's just nice to hear you be able to articulate, you know.
+ 
+Will: Right. And, and it seems like what we've been talking about right now, or up to now has been kind of higher level like, you know, business logic, decisions and documentation. But it also goes right down to the code to as well, you know, you're going to make decisions through the development that may not make sense later, and definitely build on each other, which is why it's extremely important at my exit that we have good, you know, test coverage, because there's no way anyone, even me can know everything that's going on to a point where we're not gonna have regression bugs as we make changes, add features, you know, deal with bugs. So having a robust test suite, which is, you know, never ever found as part of an MVP is part of my strategy as well. So that my exit can be successful.
+ 
+Dave: Yeah, that's, that's really good to hear to the more testing, you can have this automated the better, right, I'm definitely guilty of not having enough, although I don't know that I would say it's enough. Our API is well covered and every time we commit to master merge to master the integration tests are automatically run and before its ship, or as it shipped into test environment. So I'm happy with that. But there's a load of areas where I'm still up at night thinking about oh what if that goes wrong.
+
+Will: Oh, I'm sure.
+ 
+Dave: What, what sort of tech has you excited at the moment?
+ 
+Will: Sure. I I focused primarily on into areas. I don't know if you're familiar with Laravel
+
+Dave: A bit, yeah. I used to be a PHP guy, not recently.
+
+Will: I love Laravel and in fact, the startup that I've been referring to throughout this call is Laravel shop, we have several Laravel apps and are pretty deeply embedded in that ecosystem. Also do some node bait, node js development as well. So those are my two areas of focus. It seems like lately, I've been focusing mostly on Laravel. And I just love that the community, I know you're not completely familiar, but for any listeners out there, I highly recommend getting into laravel just the community is great. Support is great, but a lot of really helpful tools to build solid, even scalable web applications.
+ 
+Dave: Yeah, back when I was using it, trying to think how long ago it was, it took 2014, 2015 maybe even then the community was was pretty solid. Oh, yeah, you know, the amount of libraries and packages available weren't quite to the level of node and NPM. But then again, I've never heard of a disaster a security issue, like I've heard of, at least twice.
+ 
+Will: Well that could be just because, you know, security by obscurity, but yes, yeah, I think 20 those dates referring to it, or about when the startup started. So yeah, that can learn about far five, excuse me, 4.2. And yeah, the the community as well as the software has matured a lot since then. I think the long term support version is 5.5 right now. And 5.7 is the latest release. But it's just served this startup very well. You know,
+there's a fairly low learning curve for developers, because, you know, everyone has done some WordPress development, their life, you know, may not be the sexiest thing for developers to work on. But it's definitely has provided us a really stable development environment. And something that's been really fun to work on.
+
+Dave: Down, the stable is always good.
+
+
+
+Will: Exactly. That's something that takes some time getting junior developers to understand, you know, simplicity and stability is really much more important than the latest greatest.
+ 
+Dave: Yes, absolutely. And, you know, it's usually I think you you either mentioned or alluded to it, that it's usually easy enough to find PHP developers. Sometimes their PHP code wasn't so good. That doesn't mean that PHP is bad. That means that it's so easy to get into that it's easy to write bad code.
+
+Will: And a lot a lot of the most popular frameworks I you said WordPress, and that's a good example. But craft or many of the other ones are really geared not really, for software engineers. They're geared for marketers to be able to do development. So it really foster's some really bad habits that we have to get the kind of mentor out of some of these junior developers as they come on, you know, give them encourage them to move away from a lot more the procedural development that's encouraged by WordPress and others to a lot more of the upper object oriented, MPC that is encouraged by good frameworks, like Laravel.
+ 
+Dave: Sure. Is there anything that you can think of, in a general instance that you'd want to tell an incoming CTO, so not quite specific to the application, but just in general, as you were doing the transition, that would be good to share with listeners?
+
+Will: Sure, a few things, one thing that caught me off guard transitioning from the lead developer role to something more managerial, you have to be deliberate about the amount of time and effort spent on coding versus management, you know, you can't do 100% of both. But ultimately, you're, you know, responsible for 100% of both. So, I think that being okay, with not doing all of development delegating a lot more than you may be comfortable with, I think, was been a bit of a frustration for me, as I took on these roles that and, and the people side, I mentioned that earlier, but, you know, the CTO is a unique role, you know, when you when you hire developer lot of times, you know, you ask what, where you see yourself in five years, and you're often trying to determine if they are wanting to follow the software engineering senior track, or they're more interested the management track, but CTO role I, from my experience, at least, has been a balance, a tough balance but to find balance between those two concepts, really. So you're responsible for the tech, you know, you're making all a lot of the architecture decisions, you know, citing which vendors we're going to be using. But also you're you're also you're responsible for mentoring the team. So you have to exhibit a lot more of those soft skills that really you haven't had to use, really, as a lead developer,
+ 
+Dave: What the way I think about that, and I may have just this moment solidified the way articulate it is.
+
+
+
+Will: You're welcome.
+
+
+
+Dave: Thank you very much. As a developer, it's about what I build as a CTO, it's about what we build. 
+
+
+
+Will: That's exactly right.
+
+
+
+Dave: Now I mean, obviously, everyone is a member of the team. But still, you can only really control your effort when you're in as a more junior member. But it's all about becoming a force multiplier to be a CTO.
+ 
+Will: That's right. And really checking your ego at the door, you know, because a lot of times behind the scenes, you're putting out fires and making important decisions, even if it's actually coating them. But, you know, letting some letting the team shine over over your individual effort is really important. It even if it's just for company culture 
+
+Dave: Yeah. Do you have any tips on cultivating a good culture?
+ 
+Will: Yeah, well, I think communication is really key. I was talking with the CIO this morning. And he mentioned that leading leading from the front rather than from behind is really important, because the team needs to see you energized about the product and energized about the team. Because, you know, you could be working in the background, fixing bugs and making really important decisions that no one sees, but they need to know the, you know, you're there, you're there supporting them, as well as, you know, when you're doing a PR reviews and code reviews, being firm, but kind in is very important. Their developers need to know that they can make mistakes and the the team's wrath will be on them. So mentoring through in that way. I think it's important for company culture.
+ 
+Dave: Great point. Yeah, definitely a great point. Is there anything else tech based that you think we haven't mentioned? That is is really important to kind of this theme? 
+
+
+
+Will: I don't, I don't think so. No?
+ 
+Dave: Okay. Yeah, before we started, you began to tell me a story about how you ended up living in Scotland for a while. So you're originally from?
+ 
+Will: The US, I lived all over went to High School in Charlotte, North Carolina. But right now I'm in Pennsylvania. But my dad is a minister of interior minister and they have a pulpit exchange with the Church of Scotland. So way back I think this was 2004 or 5 somewhere around in there. We get a public exchange with the church in the island sky, which is just one of the most beautiful places I've ever been. And so we lived in a church own house there right on the ocean place where there are some more people just wants the full experience.
+ 
+Dave: Really neat, what what was the most surprising thing about that?
+
+
+
+Will: That's well, how much it rains and it rains a lot in northern Pennsylvania. But man, nothing like the UK I was very unprepared for that we were there in the summer and I packed like one hoodie not expected to be as cold or is windy as it was but it was just a really nice experience we were in in in Dallas guys I mentioned and there's really you know, not lot going on there. It's farmland there's couple of coffee shops, things like that. So it was really good experience you know, for slowing down the pace coming from a big city to their spending six weeks there. You know, I did a lot of reading spent a lot of times outdoors hiking, and it was just really good experience for for myself.
+ 
+Dave: Did you did you bring any of that back with you so that when things get stressful, that you're able to find that inner peace?
+
+Will: Yeah, stress is tough, especially as you get higher and higher in tech leadership. As I know you are aware. Yeah, I think that's something that I'm constantly having to relearn how to deal with stress, don't have any tips for you unfortunately.
+ 
+Dave: I myself always feel better when I meditate. But it's very hard muscle to keep exercised. As is to the gym.
+
+Will: I always feel I know that ultimately, that's, it's, you know, the right thing to do for your mind, body and soul. But just feels like, you know, I could be it could be working, you know, it could be a few, it feels like a waste of time in a moment. But something I'm struggling with, yes.
+ 
+Dave: Well, that's, that's how I actually able to convince myself that doing this podcast is not a waste of time, because I get to talk interesting people like you and learn things and solidify my own thoughts as I just did a moment ago. So it may not be directly work related, but it definitely benefits my work. And it's also almost like journaling except with my I've got mild dyslexia. So journaling is not really a great use of my time. I actually was reading some notes from a meeting I was in the other day, and it's quite possible at a stroke in the middle because I have no idea what the letters even worse. So I don't know what.
+ 
+Will: Well, to that point. I think that yeah, it's very important to kind of get outside of yourself and your, your bubble even, you know, I work from home, and it's, it's really easy to, you know, stay in my head. And, you know, I talked with, you know, plan for people throughout the week, but it's pretty small community that kind of thinks the same way. So, you know, doing things like this podcast and going to meetups and things, really good way of talking with you. I'm getting other perspectives which I think can very quickly and easily be translated to, you know, my day to day work.
+
+Dave: Yeah, excellent. Um, oh, there was one one more thing I was going to say. Gosh, I can't believe I forgotten it. Ah, oh, yes. So I thought of one more tech thing, what tools do you use? So not, you know, necessarily frameworks or programming languages but like, so like confluence we both mentioned what sort of tools make it so much easier to do your job?
+
+Will: Yeah, I from a team perspective, we use JIRA pretty heavily, pretty ingrained in the Atlassian ecosystem there, Bitbucket pipelines and JIRA and all of that kind of follow as originally as possible the Agile software development process. Personally, I love Omnifocus, it was it was pretty popular while back. But I haven't seen very many people using it. But it's a really great app that integrates with calendar and it's it keeps me focused, because I can set you know, content texts to the like, right now is work time. And I'm working with client A, I can update the context of on the focus so that I'm only looking at tasks related to that client. And it's been really good for, you know, managing the noise
+Slacking back, you know, is at this point unnecessary equal, but it just gets so noisy, try to, you know, stay out of it. And you channels as much as I can, while still, you know, being an effective leader. So, I think, I think slack is something that we use that doesn't necessarily make us better or, or help us communicate.
+ 
+Dave: Yeah, that's when we've my team and I have been struggling with ourselves, you know, slack is great for discussions when they can't be done on video chat, because they need to be asynchronous, but when it's related to task based to work, it delivers too much urgency is what we're saying.
+ 
+Will: It does. Yeah, that's a really good point. So yeah, it makes it seem like everything needs to be done now, and it just becomes so noisy.
+ 
+Dave: So we're we're trying to make sure that we time frame things put things that we use Trello as opposed to JIRA. Now, I have that argument in my head all the time. Do we need JIRA do we need Trello? Do we need JIRA or Trello? Which one do we should we use? You know, they both have really good benefits and weaknesses.
+ 
+Will: Do you mind if I ask how big your team is?
+ 
+Dave: Nine total.
+ 
+Will: I'd be interested in hearing your Trello workflow because I've had the same internal debate and I was having have found a way in making Trello effective for a team that big.
+ 
+Dave: Yeah, so Well, part of it is we've got through, so we've got to marketing and then our CEO who's kind of marketing slash consultancy slash product owner when she's available, because she's doing so much other work. So what we're using is product board as kind of a road mapping tool, which is the disc the argument for JIRA is because there's not really a good way to get a higher level overview that drills down without manual work. There are integrations between product board and Trello so that you can push a ticket from product board into Trello for day to day development Trello just wins. For road mapping and time lining and all the things that are already hard Trello does no favors.
+
+Will: Right? Because it's hard to define sprints and stories and things like that. Right?
+
+
+
+Dave: Well, and really, I think our biggest problem beyond tools is not having a real product owner or or a real Scrum Master one or the other, or some hybrid, or pm or whatever you want to call it, right? There's nobody managing the process. I'm trying, it's not a strength, I have it. Also, I'm already doing the other two full time jobs of trying to develop code and develop a team and then trying to do something that I'm really bad at on top of it is, is not great. I know that that is a big failing of mine for the team. And I haven't come up with a solution yet. But we keep we keep trying new things, seeing what works, seeing what doesn't, keeping a little bit of bits that do work and moving the bits that don't, but, you know, I don't, I don't know, do you have, you know, full full on Scrum masters or?
+ 
+Will: Yeah, so that that was, yeah, that's really interesting that you mentioned that, because, yeah, often when an interim CTO comes along, it's really, you know, the CEO. And he sometimes handles the business decisions, or sometimes there's a CEO, and then the development team, that's it. So as you reference there, the CTO really takes on the role of, you know, lead architect, Development Manager, as well as project and Product Manager, which is a huge effort, a huge, a huge task, when it's really impossible for one person to do. So project manager, and if the startup has the funds, a product owner are definitely the first hires I make, and we did that for this startup here, I, you know, know just enough about agile to make them make mistakes.
+ 
+Dave: Same both. Same both.
+
+
+
+Will: Exactly. So I like to have someone who really knows what they're doing, and who can come in and really properly train the team in the Agile methodology as well as, you know, set up sprints and, and understand the product well enough to to delegate to developers. So I think that's really something that should be one of the first things that gets off the CTOs plate so they can focus on really CTO things. But, you know, obviously, it is one of the things that is expected of the interim CTO, you know, until someone else brought on to do that. So, yeah, we have a project manager, and we have a product owner, probably going to hire one or two more product owner says, you know, as we create new products for them, we actually hired an internal, excuse me an outside consultancy, to come in and do a two day training on Scrum. And an agile is for both project manager as well as the entire team. And that's been a pretty, pretty good investment as well.
+ 
+Dave: Yeah, and that's one of the things that I've tried to make the wrong thing fit into the box that we need, obviously, you know, a good a good p o PM, Scrum Master whatever, that set of skills that will bring your team up to a full complement. They have to be a pretty senior person to actually understand the different areas, especially if you're trying to squeeze them all into one person. And, you know, I've tried to figure out how to do that with Junior people and interns and all sorts of different things because I, you know, like, um, I think it's Google that hire, you know, smart people out of college, and then make them product managers, right, because they understand the tech and then but they already have Senior Product Managers to mentor them. So it doesn't work if you just throw them into the shark.
+ 
+Will: Yeah, you can't, I mean, as soon as you hire a junior Product Manager, that you're ultimately going to still be doing that, and, you know, all this cost money. So it's really a tough decision for some startups, you know, based on their, you know, financial capabilities, which, again, is the whole problem of trying to solve with interim CTO, you know, I'm there to, you know, provide PMPO leadership as needed from the beginning. But, you know, trying to get them to have a full time one pretty early on is pretty beneficial for their product. And company has all have to convince them of that.
+
+
+
+Dave:Yeah, that's, this is the other thing in my head. Is that how we can do this without having more overhead than we have? horsepower. That's, that's what that's why you're in charge. Right? 
+
+
+
+Will: Yeah, that's like this right. With no money.
+ 
+Dave: Sorry go ahead.
+
+
+
+Will:  I've been fortunate enough to have been working with some pretty well funded startups. So a lot of these challenges I've been fortunate not to have to deal with as much as as many you are others not not to sound insulting, I apologize.
+
+Dave: No, no, we're mostly bootstrapped. We have some investment but it's still a lot of it is through consultancy, so yeah, we have to be.. 
+
+
+
+Will: So you know, you'll have your own challenges related to that. So, yeah, it's tough. There's no, you know, blanket answer. Unfortunately,
+ 
+Dave: Yeah. And don't get me wrong. I'm not, I'm not bitching per se. I'm just trying to express that it's hard. And it is anybody out there who's listening this is this is probably the hardest thing is trying to stay out of people's way, but have enough process so that it's understandable, you know, right? People go off into black holes of code, which is where most of us developers want to be, you can't do that. Because the marketing team or the whoever is dealing with marketing. I mean, I believe everyone is part of the marketing team, and everyone is part of the product team. But the people who do the day to day marketing elements need to know when bits of the product will be available to begin the process of implementing marketing. So, it's just hard. And I have no answers for you. And I'm very sorry. But I think it's, it's just one of those things that you have to understand that that is the challenge. Way more than did we use the right algorithm for the sort.
+ 
+Will:  That's, that's right. That's another thing that I've had to learn along the way, as, you know, as you're getting more and more responsibility and leadership in whatever company, you know, you start to look more, more and more big picture, you know, all the problems that you're dealing with now, and you know, how to make sure things scale properly. And, you know, we can handle growth in the future, when, when really a lot of time, just need to, you know, step back, take a day a day at a time, make good decisions towards that end goal on a daily basis, and you'll get there
+ 
+Dave: Definitely. Alright, that's awesome. Um, how can people are actually I want to go back to the CTO Sumo for just a second so you're currently in closed beta is that correct?
+
+
+
+Will: Yeah,currently private beta. Really, you know, I'm trying to develop this product the right way and a lot of years ago, created landing page with marketing copy and got a mailing list set up. And so yeah, that right now it's in private beta. I'm collecting interested parties and then working with my current clients, you know, as as use cases for this product. I think early next year, I should probably be opening it up for new clients. It's unfortunately one of those products that does not scale well. And, you know, I'm, I'm the interim CTO, and I do have some colleagues that I do use for this as well. But you know, I can't, you know, have 100 or 200 clients immediately. So, it's tough to see you know, how strategy for, you know how to grow this, which is why it's private beta at the moment.
+ 
+Dave: Okay, but if anybody is interested
+ 
+Will: Yes sumo.com and sign up for the early access
+ 
+Dave: And I'll put the link in the show notes. 
+
+
+
+Will: Yes, thank you. 
+
+
+
+Dave: How else can people contact you? where's the best place?
+ 
+WIll: @wyeomansdev on Twitter is my personal professional Twitter handle.
+ 
+Dave: Okay, I don't think I had that one. If you if you would send that to me. 
+
+
+
+Will: I will do that.
+
+
+
+Dave: Then. That'd be great. And then I can make sure that we get connected there. 
+
+
+
+Will: I'll do that. 
+
+
+
+Dave: Okay. Is there anything else you want to bring up talk about?
+
+
+
+Will: I think that's it. I appreciate your time. 
+
+
+
+Dave: No, I appreciate yours. This was great. I had really enjoyable discussion. And, you know, I always learn things from you know, smart people out there that are somewhat like me.
+ 
+Will: Your perspective and it's comforting to know you're solving you're doing some of the same problems that that we are so
+ 
+Dave: Same. Well, thank you very much. And thanks for listening, everyone. 
+
+
+
+Until next time, remember, any sufficiently advanced technology is indistinguishable from magic.
